Add bullmq for Redis Integration

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 EMAIL_PASS=h4AD8D16iDVi
 EMAIL_USER=anurag.gupta@multibagg.com
 RECEIVER_EMAIL=anuraggupta182003@gmail.com
+REDIS_URL=redis://localhost:6379
