--- a/package.json
+++ b/package.json
@@ -5,10 +5,13 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "type": "module",
     "start": "next start",
     "lint": "next lint",
     "test": "jest",
-    "coverage": "jest --coverage"
+    "coverage": "jest --coverage",
+    "start:worker": "ts-node workers/dailyJobWorker.ts",
+    "start:scheduler": "ts-node workers/scheduleDailyTestReportJob.ts"
   },
   "dependencies": {
     "@emotion/react": "^11.11.1",
@@ -21,11 +24,13 @@
     "@types/react": "18.2.12",
     "@types/react-dom": "18.2.5",
     "axios": "^1.4.0",
+    "bullmq": "^5.52.2",
     "cheerio": "^1.0.0-rc.12",
     "dotenv": "^16.5.0",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.5",
     "fs": "^0.0.1-security",
+    "ioredis": "^5.6.1",
     "jest-html-reporter": "^4.1.0",
     "next": "13.4.5",
     "nodemailer": "^7.0.2",
@@ -35,7 +40,6 @@
     "react-hook-form": "^7.44.3",
     "react-redux": "^8.1.0",
     "react-toastify": "^9.1.3",
-    "typescript": "5.1.3",
     "typescript-coverage-report": "^1.1.1"
   },
   "devDependencies": {
@@ -46,6 +50,8 @@
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
     "msw": "^1.2.2",
-    "next-router-mock": "^0.9.6"
+    "next-router-mock": "^0.9.6",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.8.3"
   }
 }
