--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
     "msw": "^1.2.2",
-    "next-router-mock": "^0.9.6"
+    "next-router-mock": "^0.9.6",
+    "supertest": "^7.1.0"
   }
 }
