--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "next start",
     "lint": "next lint",
     "test": "jest",
-    "coverage": "jest --coverage"
+    "test:unit": "jest --coverage",
+    "test:api": "jest --testPathPattern=apitest --coverage"
   },
   "dependencies": {
     "@emotion/react": "^11.11.1",
