--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-EMAIL_PASS=v2ZtNFrci87f
-EMAIL_USER=soumendu.roy@multibagg.com
-RECEIVER_EMAIL=roysoumendu765@gmail.com
+EMAIL_PASS=MKYhx60zLAku
+EMAIL_USER=anurag.gupta@multibagg.com
+RECEIVER_EMAIL=anuraggupta182003@gmail.com
 REDIS_URL=redis://localhost:6379
